// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct with 1 expense ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling: 
    $2.35
  </h1>
</div>
`;

exports[`should render correct with multiple expenses ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling: 
    $2,313,213.21
  </h1>
</div>
`;
